test/1.2/errors/T_ESYNTAX_08.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

// Unicode conversion of non-string tokens in error message, bug 20430
/// ERROR ESYNTAX
bank 5;
